[TestUnifiedFindingPresenter_CliOutput/snapshot_test_of_human-readable_output - 1]

Testing some-directory (package.json) ...

Security issues: 1

 ✗ [HIGH] High severity vulnerability
   Finding ID: SNYK-JS-VM2-5537100
   Info: https://snyk.io/vuln/SNYK-JS-VM2-5537100
   Introduced by: root@0.0.0
   Introduced through: root@0.0.0 > foo@1.0.0
   Risk Score: 780


License issues: 1

 ✗ [MEDIUM] LGPL-3.0 license
   Finding ID: snyk:lic:npm:web3-core:LGPL-3.0
   Info: https://snyk.io/vuln/snyk:lic:npm:web3-core:LGPL-3.0
   Introduced by: root@0.0.0
   Introduced through: root@0.0.0 > foo@1.0.0
   Legal instructions:
   ○ for LGPL-3.0: This license requires source code disclosure when modified.

                                       
Issues with no direct upgrade or patch:
  ✗ High severity vulnerability [High Severity] [https://security.snyk.io/vuln/SNYK-JS-VM2-5537100] in foo
    introduced by root@0.0.0 > foo@1.0.0
  ✗ LGPL-3.0 license [Medium Severity] [https://security.snyk.io/vuln/snyk:lic:npm:web3-core:LGPL-3.0] in foo
    introduced by root@0.0.0 > foo@1.0.0

╭─────────────────────────────────────────────────────────╮
│ Test Summary                                            │
│                                                         │
│   Organization:                                         │
│   Test type:         open-source                        │
│   Project path:      test/path                          │
│                                                         │
│   Total security issues: 1                              │
│   Ignored: 0 [ 0 CRITICAL  0 HIGH  0 MEDIUM  0 LOW ]    │
│   Open   : 1 [ 0 CRITICAL  1 HIGH  0 MEDIUM  0 LOW ]    │
│                                                         │
│   Total license issues: 1                               │
│   Ignored: 0 [ 0 CRITICAL  0 HIGH  0 MEDIUM  0 LOW ]    │
│   Open   : 1 [ 0 CRITICAL  0 HIGH  1 MEDIUM  0 LOW ]    │
╰─────────────────────────────────────────────────────────╯
💡 Tip

   To view ignored issues, use the --include-ignores option.
                                                            

---

[TestUnifiedFindingPresenter_CliOutput/snapshot_test_with_multiple_license_instructions - 1]

Testing  ...

License issues: 1

 ✗ [HIGH] GPL-3.0 OR MIT license
   Finding ID: snyk:lic:npm:dual-pkg:GPL-3.0-OR-MIT
   Info: https://snyk.io/vuln/snyk:lic:npm:dual-pkg:GPL-3.0-OR-MIT
   Introduced by: root@0.0.0
   Introduced through: root@0.0.0 > foo@1.0.0
   Legal instructions:
   ○ for GPL-3.0: Strong copyleft license. Requires source code disclosure for modifications.
   ○ for MIT: Permissive license. Must include original copyright notice.

                                       
Issues with no direct upgrade or patch:
  ✗ GPL-3.0 OR MIT license [High Severity] [https://security.snyk.io/vuln/snyk:lic:npm:dual-pkg:GPL-3.0-OR-MIT] in foo
    introduced by root@0.0.0 > foo@1.0.0

╭─────────────────────────────────────────────────────────╮
│ Test Summary                                            │
│                                                         │
│   Organization:                                         │
│   Test type:         open-source                        │
│   Project path:      test/path                          │
│                                                         │
│   Total license issues: 1                               │
│   Ignored: 0 [ 0 CRITICAL  0 HIGH  0 MEDIUM  0 LOW ]    │
│   Open   : 1 [ 0 CRITICAL  1 HIGH  0 MEDIUM  0 LOW ]    │
╰─────────────────────────────────────────────────────────╯
💡 Tip

   To view ignored issues, use the --include-ignores option.
                                                            

---

[TestUnifiedFindingPresenter_CliOutput/snapshot_test_with_license_without_instructions - 1]

Testing  ...

License issues: 1

 ✗ [MEDIUM] Apache-2.0 license
   Finding ID: snyk:lic:npm:test-pkg:Apache-2.0
   Info: https://snyk.io/vuln/snyk:lic:npm:test-pkg:Apache-2.0
   Introduced by: root@0.0.0
   Introduced through: root@0.0.0 > foo@1.0.0

                                       
Issues with no direct upgrade or patch:
  ✗ Apache-2.0 license [Medium Severity] [https://security.snyk.io/vuln/snyk:lic:npm:test-pkg:Apache-2.0] in foo
    introduced by root@0.0.0 > foo@1.0.0

╭─────────────────────────────────────────────────────────╮
│ Test Summary                                            │
│                                                         │
│   Organization:                                         │
│   Test type:         open-source                        │
│   Project path:      test/path                          │
│                                                         │
│   Total license issues: 1                               │
│   Ignored: 0 [ 0 CRITICAL  0 HIGH  0 MEDIUM  0 LOW ]    │
│   Open   : 1 [ 0 CRITICAL  0 HIGH  1 MEDIUM  0 LOW ]    │
╰─────────────────────────────────────────────────────────╯
💡 Tip

   To view ignored issues, use the --include-ignores option.
                                                            

---

[TestUnifiedFindingPresenter_CliOutput/snapshot_test_with_multiple_results - 1]

Testing some-project (package.json) ...

╭──────────────────────────────────────╮
│ Test Summary                         │
│                                      │
│   Organization:                      │
│   Test type:         open-source     │
│   Project path:      some-project    │
│                                      │
│   Total issues: 0                    │
╰──────────────────────────────────────╯
💡 Tip

   To view ignored issues, use the --include-ignores option.
                                                            
─────────────────────────────────────────────────────

Testing another-project (requirements.txt) ...

╭─────────────────────────────────────────╮
│ Test Summary                            │
│                                         │
│   Organization:                         │
│   Test type:         open-source        │
│   Project path:      another-project    │
│                                         │
│   Total issues: 0                       │
╰─────────────────────────────────────────╯
💡 Tip

   To view ignored issues, use the --include-ignores option.
                                                            
─────────────────────────────────────────────────────
╭─────────────────────────────────────╮
│ Overall Test Summary                │
│                                     │
│   Organization:                     │
│   Test type:         open-source    │
│   Projects tested:   2 projects     │
│                                     │
│   Total issues: 0                   │
╰─────────────────────────────────────╯
---

[TestUnifiedFindingPresenter_MultipleComponents_GroupsByComponent - 1]

Testing my-sbom.json ...

Component: pkg:npm/app-a@1.0.0
Security issues: 2

 ✗ [MEDIUM] issue in pkg:npm/app-a@1.0.0
   Finding ID: 00000000-0000-0000-0000-0000000000a2
   Risk Score: N/A

 ✗ [CRITICAL] issue in pkg:npm/app-a@1.0.0
   Finding ID: 00000000-0000-0000-0000-0000000000a1
   Risk Score: N/A


Component: pkg:npm/app-b@2.0.0
Security issues: 1

 ✗ [HIGH] issue in pkg:npm/app-b@2.0.0
   Finding ID: 00000000-0000-0000-0000-0000000000b1
   Risk Score: N/A


╭─────────────────────────────────────────────────────────╮
│ Test Summary                                            │
│                                                         │
│   Organization:                                         │
│   Test type:         open-source                        │
│   Project path:                                         │
│                                                         │
│   Total security issues: 3                              │
│   Ignored: 0 [ 0 CRITICAL  0 HIGH  0 MEDIUM  0 LOW ]    │
│   Open   : 3 [ 1 CRITICAL  1 HIGH  1 MEDIUM  0 LOW ]    │
╰─────────────────────────────────────────────────────────╯
💡 Tip

   To view ignored issues, use the --include-ignores option.
                                                            

---
